--- a/example/template/example.pug
+++ b/example/template/example.pug
@@ -1,3 +1,3 @@
 .container 
     | this is a test from pug
-    | !{\ddn\api\Helpers\pre_var_dump($_OP_HANDLER)}
+    | !{\ddn\api\Helpers\p_var_dump($_OP_HANDLER)}
